# beer-bud

./: .gitignore  CMakeLists.txt  Main.qml  README.md  StartMenu.qml  TextButton.qml  TicTacToe.qml  TicTacToeComputer.js  main.cpp
